@@ -5,6 +5,7 @@ import com.switchfully.themoviewasbetter.mapper.BookMapper;
 import com.switchfully.themoviewasbetter.repository.BookRepository;
 import org.springframework.stereotype.Service;
 
+import java.util.HashMap;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -19,7 +20,7 @@ public class BookService {
     }
 
     public List<BookDTO> getAllBooks() {
-        return bookRepository.getAllBooks().stream().map(mapper::toDto).collect(Collectors.toList());
+        return bookRepository.getAllBooks(new HashMap<>()).stream().map(mapper::toDto).toList();
     }
 
     public BookDTO findByIsbn(String isbn){
